# basic_aiogram_bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 4eeb20c17599_2024_01_21_19_13_initial_migration.py
src/: app.py
src/db/: base.py  config.py
src/handlers/: start.py
src/keyboards/: keyboard.py
src/models/: users.py
