[tool.poetry]
name = "basic_aiogram_bot"
version = "0.1.0"
description = ""
authors = ["dimetry537 <maksakov1988@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"
aiogram = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
